Ajuste de placeholder

--- a/WebContent/imc.html
+++ b/WebContent/imc.html
@@ -7,11 +7,11 @@
 <body>
 	<h3>Calculo de Imc</h3>
 	<form method = "post"  action = "Imc.do">
-		Nome <input type = "text" name = "nome"/>
+		Nome <input type="text" Placeholder="Digite seu nome" name = "nome"/>
 		<br/>
-        Altura(m) <input type = "number" Placeholder="1.70" step="0.01" min="0" name = "altura"/>
+        Altura(m) <input type="number" Placeholder="1.70" step="0.01" min="0" name = "altura"/>
         <br>
-        Peso(kg) <input type = "number" Placeholder="70" step="0.01" min="0" name = "peso"/>
+        Peso(kg) <input type="number" Placeholder="70" step="0.01" min="0" name = "peso"/>
         <br/>
         <br/>
         <input type = "submit" value = "Calcular"/>
